Closed Bug 1329296 Opened 7 years ago Closed 7 years ago

Crash in mozilla::gfx::ExtractSubset

Categories

(Core :: Graphics, defect, P1)

52 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- unaffected
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: milan, Assigned: lsalzman)

References

Details

(Keywords: crash, Whiteboard: [gfx-noted])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-69788d4e-18db-4a36-a89d-763f52170106.
=============================================================
Andrew, can you take a look at this?  Low volume, but seems to be new.
Flags: needinfo?(aosmond)
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Attachment #8824523 - Flags: review?(mchang)
Regressed by bug 1299435, so affects 52+.
Has Regression Range: --- → yes
Component: ImageLib → Graphics
Flags: needinfo?(aosmond)
OS: Windows 10 → All
Priority: -- → P1
Hardware: Unspecified → All
Whiteboard: [gfx-noted]
Version: unspecified → 52 Branch
Attachment #8824523 - Flags: review?(mchang) → review+
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8059df49f5d0
don't use ExtractSubset on null SkImage when accessing surface pattern fails. r=mchang
https://hg.mozilla.org/mozilla-central/rev/8059df49f5d0
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Please nominate this for Aurora approval when you get a chance.
Blocks: 1299435
Flags: needinfo?(lsalzman)
Comment on attachment 8824523 [details] [diff] [review]
don't use ExtractSubset on null SkImage when accessing surface pattern fails

Approval Request Comment
[Feature/Bug causing the regression]: bug 1299435
[User impact if declined]: Skia-related crashes.
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no 
[List of other uplifts needed for the feature/fix]: aurora (52)
[Is the change risky?]: no
[Why is the change risky/not risky?]: Simple null-check that has already been tested a while in 53.
[String changes made/needed]: None
Flags: needinfo?(lsalzman)
Attachment #8824523 - Flags: approval-mozilla-aurora?
Comment on attachment 8824523 [details] [diff] [review]
don't use ExtractSubset on null SkImage when accessing surface pattern fails

crash fix, beta52+
Attachment #8824523 - Flags: approval-mozilla-aurora? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: