Bug 1329296 - don't use ExtractSubset on null SkImage when accessing surface pattern fails. r=mchang

MozReview-Commit-ID: I9K07esTA0W